--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jukepost-overlay",
   "private": true,
+  "license": "Apache-2.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
